# jsonbeautify

./: .gitignore  CONTRIBUTING.md  DEVLOG-v13.md  LICENSE  OPTIMIZATION_LOG-v13.md  PRIVACY.md  README.md  build.py  capacitor.config.json  index.html  manifest.json  mobile-preview.html  package-lock.json  package.json  sw.js
.github/workflows/: pages.yml  release.yml  version-check.yml
.husky/: pre-commit
.monkeycode/docs/: APP_REVIEW_RESPONSE.md  milestone-2026-07-appstore-fix.md  milestone-2026-07-icon-cleanup.md  optimization-guide.md
docs/: app.js  index.html  manifest.json  styles.css  sw.js
docs/styles/: main.css
ios/App/: exportOptions.plist
ios/App/App/: Info.plist
ios/App/App.xcodeproj/: project.pbxproj
ios/App/App/Assets.xcassets/AppIcon.appiconset/: Contents.json
ios/App/App/Base.lproj/: LaunchScreen.storyboard
screenshots/: README.md
scripts/: build-appstore.sh  build.js  bump-version.js  check-appstore-version.py  check-versions.js  gen-ipad-portrait.py  generate-icons.js  generate-ios-icons.js  pre-commit-check.js  submit-appstore-review.py
src/: app.js  index.html  styles.css
src-tauri/: Cargo.toml  Entitlements.plist  tauri.appstore.conf.json  tauri.conf.json  tauri.ios.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src/scripts/: i18n.js  main.js  mobile-detect.js
src/styles/: main.css
